<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.perez.mateo.petsfinder.foundpetActivity">



    <EditText
        android:id="@+id/editText_foundpetactivity_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:inputType="phone"
        android:hint="@string/foundpetactivity_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_foundpetactivity_titlephone"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="13dp" />


    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/foundpetactivity_titlepic"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_foundpetactivity_titlepicturepet" />


    <ImageView
        android:layout_width="138dp"
        android:layout_height="126dp"
        android:id="@+id/imageView_addpetactivity_picturepet"
        android:background="@mipmap/ic_addpic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView_foundpetactivity_titlenamepet"
        app:layout_constraintTop_toBottomOf="@+id/textView_foundpetactivity_titlepicturepet"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/foundpetactivity_titlename"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_foundpetactivity_titlenamepet"
        android:layout_marginTop="157dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_foundpetactivity_titlepicturepet" />


    <EditText
        android:id="@+id/editText_foundpetactivity_characteristicspet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/addpetactivity_characteristics"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_foundpetactivity_titlecharacteristicspet"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editText_foundpetactivity_namepet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/foundpetactivity_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_foundpetactivity_titlenamepet"
        android:layout_marginEnd="8dp" />


    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/foundpetactivity_titlecharacteristics"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_foundpetactivity_titlecharacteristicspet"
        app:layout_constraintTop_toBottomOf="@+id/editText_foundpetactivity_namepet" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/foundpetactivity_titlephone"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_foundpetactivity_titlephone"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_foundpetactivity_nowgroup" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/foundpetactivity_titlenow"
        android:id="@+id/textView_foundpetactivity_titlenow"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_foundpetactivity_characteristicspet"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <RadioGroup
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup_foundpetactivity_nowgroup"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView_foundpetactivity_titlenow"
        android:layout_marginStart="16dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_foundpetactivity_yes"
            android:text="@string/foundpetactivity_radioyes"/>

        <RadioButton
            android:id="@+id/radio_foundpetactivity_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foundpetactivty_radiono" />


    </RadioGroup>


    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/foundpetactivity_save"
        android:background="@drawable/button_shapebutton"
        android:textColor="@color/colortext"
        android:id="@+id/button_fountpetactivity_savepet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_foundpetactivity_phone"
        app:layout_constraintVertical_bias="1.0" />




</android.support.constraint.ConstraintLayout>
