<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.perez.mateo.petsfinder.addpetActivity">


    <EditText
        android:id="@+id/editText_addpetactivity_resumepet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/addpetactivity_resume"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_addpetactivity_titleresumepet"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/spinner_addpetactivity_typepet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_addpetactivity_titletypepet"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/addpetactivity_titlepic"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_addpetactivity_titlepicturepet" />


    <ImageView
        android:layout_width="138dp"
        android:layout_height="126dp"
        android:id="@+id/imageView_addpetactivity_picturepet"
        android:background="@mipmap/ic_addpic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView_addpetactivity_titlenamepet"
        app:layout_constraintTop_toBottomOf="@+id/textView_addpetactivity_titlepicturepet"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/addpetactivity_titlename"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_addpetactivity_titlenamepet"
        android:layout_marginTop="157dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_addpetactivity_titlepicturepet" />


    <EditText
        android:id="@+id/editText_addpetactivity_characteristicspet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/addpetactivity_characteristics"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_addpetactivity_titlecharacteristicspet"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editText_addpetactivity_namepet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/addpetactivity_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_addpetactivity_titlenamepet"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/addpetactivity_titletype"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_addpetactivity_titletypepet"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_addpetactivity_characteristicspet" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/addpetactivity_titlecharacteristics"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_addpetactivity_titlecharacteristicspet"
        app:layout_constraintTop_toBottomOf="@+id/editText_addpetactivity_namepet" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/addpetactivity_titleresume"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/textView_addpetactivity_titleresumepet"
        app:layout_constraintTop_toBottomOf="@+id/spinner_addpetactivity_typepet" />

    <Button
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/addpetactivity_save"
        android:background="@drawable/button_shapebutton"
        android:textColor="@color/colortext"
        android:id="@+id/button_addpetactivity_savepet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_addpetactivity_resumepet"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />


</android.support.constraint.ConstraintLayout>
