<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackgroundmenu"
    tools:context="com.perez.mateo.petsfinder.menuActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuactivity_titlepic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:id="@+id/textView_menuactivity_title"
        app:layout_constraintTop_toBottomOf="@+id/imageView_menuactivity_picpet"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_menuactivity_addpet"
        app:layout_constraintVertical_bias="0.202" />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@mipmap/ic_addpic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="44dp"
        android:id="@+id/imageView_menuactivity_picpet" />


    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/menuactivity_addpet"
        android:textColor="@color/colortext"
        android:background="@drawable/button_shapebutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/button_menuactivity_addpet"
        android:layout_marginTop="102dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_menuactivity_picpet" />


    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/menuactivity_checkmap"
        android:textColor="@color/colortext"
        android:background="@drawable/button_shapebutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_menuactivity_addpet"
        android:id="@+id/button_menuactivity_checkmap" />

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:text="@string/menuactivity_listpet"
        android:textColor="@color/colortext"
        android:background="@drawable/button_shapebutton"
        android:id="@+id/button_menuactivity_lispets"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_menuactivity_checkmap" />

</android.support.constraint.ConstraintLayout>
